<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclada_examples</name>
  <version>0.1.0</version>
  <description>rclada example nodes in Ada</description>
  <maintainer email="amosteo@unizar.es">Alejandro R. Mosteo</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>example_interfaces</depend>
  <depend>rclada</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
